# transcription

./: .gitignore  README.md  pyproject.toml
src/transcription/: __init__.py  transcribe.py
